Layout issues

--- a/css/agency.css
+++ b/css/agency.css
@@ -577,7 +577,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .team-member {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
@@ -588,7 +588,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .team-member h4 {
-  margin-top: 25px;
+  margin-top: 30px;
   margin-bottom: 0;
   text-transform: none;
 }
